115.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secbusybox
  name: secbusybox1
spec:
  securityContext:
   runAsUser: 1000
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600;echo Hi
    image: busybox
    name: secbusybox
    resources: {}
    securityContext:
      runAsUser: 3000
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
