125.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: 125sec
  name: a125sec
spec:
  containers:
  - image: nginx
    name: a125sec
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
