b2mc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: b2mc
  name: b2mc
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - echo hello; sleep 3600
    image: busybox
    name: bb1
  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 3600
    image: busybox
    name: bb2    
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
