bb.yaml
pod/bb created (dry run)
pod/bb created (dry run)
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bb
  name: bb
spec:
  containers:
  - args:
    - /bin/sh
    - echo -c Hello W0rld
    image: busybox
    name: bb
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
