d10.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: d10
  name: d10
spec:
  volumes:
  - name: myvol
    configMap:
      name: cmvol
  containers:
  - image: nginx
    name: d10
    resources: {}
    volumeMounts:
    - name: myvol
      mountPath: /etc/lala
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
