d16.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: d16
  name: d16
spec:
  containers:
  - image: nginx
    name: d16
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
