e2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: e2lp
  name: e2lp
spec:
  containers:
  - image: nginx
    name: e2lp
    resources: {}
    livenessProbe:
      periodSeconds: 5
      initialDelaySeconds: 5
      exec:
        command:
        - ls  
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
